--- a/assets/css/abstracts/_utility.css
+++ b/assets/css/abstracts/_utility.css
@@ -54,6 +54,10 @@
   margin-bottom: 2rem !important;
 }
 
+.d-ib {
+  display: inline-block;
+}
+
 .reading-width {
   max-width: 700px;
   width: 100%;
