--- a/assets/css/components/_button.css
+++ b/assets/css/components/_button.css
@@ -2,6 +2,7 @@ button,
 .button,
 input[type="submit"] {
   font-family: var(--font-family);
+  text-decoration: none;
   will-change: transform;
   padding: 6px 12px;
   border-radius: 4px;
@@ -24,6 +25,8 @@ button:hover {
 button:hover,
 button:active,
 button[aria-pressed="true"] {
+  text-decoration: none;
+  color: black;
   transform: translate(4px, 4px);
   box-shadow: 0 0 0 0 DarkGoldenRod;
 }
