--- a/content/index.njk
+++ b/content/index.njk
@@ -121,7 +121,7 @@ scripts: '
 		<div class="dashboard__item">
 			<h2 class="visually-hidden">Intro</h2>
 			<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
-			<p>I am Frills, the proud webmistress of this webbe site in this wonderous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
+			<p>I am Frills, the proud webmistress of this website in this wondrous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
 		</div>
 		<div class="dashboard__item --colours">
 			<ul aria-hidden="true">
@@ -188,7 +188,7 @@ scripts: '
 			<h2>Currently reading</h2>
 			',
 			body = '
-			<a href="https://www.goodreads.com/book/show/76705490-crown-of-midnight" class="hidden">Crown of Midnight - Sarah J Maas</a>
+			<a href="https://www.goodreads.com/book/show/76706470-heir-of-fire" class="hidden">Heir of Fire - Sarah J Maas</a>
 			'
 		)}}
 	</div>
