--- a/content/links.njk
+++ b/content/links.njk
@@ -33,11 +33,6 @@ scripts: '<script>
     "src": "accessiblenet.png",
     "type": "button"
   }, {
-    "alt": "Coffee Bug",
-    "href": "https://midifreak.online/",
-    "src": "coffeebug.png",
-    "type": "button"
-  }, {
     "alt": "debtdeath",
     "href": "https://debtdeath.neocities.org/",
     "src": "debtdeath.png",
@@ -106,7 +101,7 @@ scripts: '<script>
   }, {
     "alt": "Maria",
     "href": "https://maria.town/",
-    "src": "marzka_cafe.png",
+    "src": "maria_town.png",
     "type": "button"
   }, {
     "alt": "Maya Land",
