--- a/content/about.njk
+++ b/content/about.njk
@@ -28,7 +28,7 @@ eleventyNavigation:
 
 {%- block main -%}
 <div class="dashboard">
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bgwiggly">👯‍♀️ Social</h2>
 		</header>
@@ -40,7 +40,7 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bgwiggly">✨ Personality</h2>
 		</header>
@@ -53,7 +53,7 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bgdots">💖 Pseudonym</h2>
 		</header>
@@ -62,7 +62,7 @@ eleventyNavigation:
 			<p>I'll make a shrine to her one day.</p>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bgdots">🗣 Languages</h2>
 		</header>
@@ -73,7 +73,7 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bggrid">🍝 Food</h2>
 		</header>
@@ -87,7 +87,7 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bgwiggly">📚 Books</h2>
 		</header>
@@ -101,7 +101,7 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bgwiggly">🎮 Games</h2>
 		</header>
@@ -114,7 +114,7 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2 class="--bggrid">🧠 Interests</h2>
 		</header>
@@ -128,7 +128,7 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	{# <article class="dashboard__item --box">
+	{# <article class="dashboard__item --card">
 		<header>
 			<h2 class="--bgwiggly">💬 Quote</h2>
 		</header>
