--- a/content/index.njk
+++ b/content/index.njk
@@ -117,7 +117,7 @@ scripts: '
 			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out of the sea." loading="lazy" width="100" height="100">
 		</figure>
 	</article>
-	<section>
+	<section class="av-br">
 		<div class="dashboard__item">
 			<h2 class="visually-hidden">Intro</h2>
 			<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
@@ -207,7 +207,7 @@ scripts: '
 	{# <div class="dashboard__item">
 		<img src="/images/art/floating-in-dreams.jpg" class="invert--lightmode" alt="Black and white line drawing of a cartoon girl floating in dreams, stars prick the space behind her. Wearing a nighty and socks, her arms are held up weightlessly. Her hair is a mane, splayed out like an open flower.">
 	</div> #}
-	<article class="dashboard__item --box --latestposts">
+	<article class="dashboard__item --card --latestposts">
 		<header>
 			<h2 class="--bgwiggly">Latest posts</h2>
 		</header>
@@ -225,7 +225,7 @@ scripts: '
 			</div>
 		</div>
 	</article>
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<div>
 			<h2 class="visually-hidden">RSS feeds</h2>
 			<ul class="unstyled inline small">
