--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -43,7 +43,7 @@ date: 2023-11-19
 </section>
 
 <div class="dashboard">
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2>🐶 Profile</h2>
 		</header>
@@ -62,7 +62,7 @@ date: 2023-11-19
 	<img src="/images/shrine/orla/orla4.jpg" class="dashboard__item" alt="Two yellow labradors together, one is a fully grown male, led down smiling widely with a ball between his legs, the other is a small puppy sat peaking out from behind the male.">
 	<img src="/images/shrine/orla/orla5.jpg" class="dashboard__item" alt="Labrador puppy wearing a red harness at a garden centre, she has a small garden pot in her mouth which covers most of her face">
 	<img src="/images/shrine/orla/orla6.jpg" class="dashboard__item" alt="Labrador puppy sits on grass with a frisbee caught around her head and in her mouth">
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2>✨ Personality</h2>
 		</header>
@@ -84,7 +84,7 @@ date: 2023-11-19
 	<img src="/images/shrine/orla/orla9.jpg" class="dashboard__item" alt="Young labrador stands proudly on small rocks with a river in the background.">
 	<img src="/images/shrine/orla/orla10.jpg" class="dashboard__item" alt="Two labradors sit together, both sit waiting for a treat, the young one which is sat closest is smiling widely.">
 	<img src="/images/shrine/orla/orla11.jpg" class="dashboard__item" alt="Labrador is led on a white duvet, she wears a dark blue neck bandana that says 'It's my birthday'">
-	<article class="dashboard__item --box">
+	<article class="dashboard__item --card">
 		<header>
 			<h2>🦴 Likes</h2>
 		</header>
