--- a/assets/css/components/_buttonwall.css
+++ b/assets/css/components/_buttonwall.css
@@ -4,9 +4,12 @@
   flex-wrap: wrap;
   flex-direction: row;
   gap: 1px;
-  list-style-type: none;
   padding: 0;
   margin: 0 0 2rem
+}
+
+.buttonwall li::marker {
+  content: '';
 }
 
 .buttonwall.--highcontrast .buttonwall__item a {
