📃 Update blog post width

--- a/content/collections.njk
+++ b/content/collections.njk
@@ -34,7 +34,7 @@ style: '
 
 {% block main %}
 <section class="dashboard">
-  <article class="dashboard__item --box"">
+  <article class="dashboard__item --card">
     <figure class="dashboard__item-image --square">
       <img src="/images/collections/stickers/cover.png" alt="Great alt text" loading="lazy" role="presentation">
     </figure>
@@ -44,7 +44,7 @@ style: '
         </h2>
       </header>
   </article>
-  <article class="dashboard__item --box"">
+  <article class="dashboard__item --card">
     <figure class="dashboard__item-image --square">
       <img src="/images/collections/avatars/cover.png" alt="Great alt text" loading="lazy" role="presentation">
     </figure>
