--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -13,6 +13,7 @@ style: '
     background-color: var(--hsl);
     width: 100%;
     height: 70vh;
+    max-height: 700px;
     display: flex;
     align-items: center;
     justify-content: center;
