--- a/assets/css/base/_list.css
+++ b/assets/css/base/_list.css
@@ -62,6 +62,7 @@ a.rss::before {
 ul.colourpalette {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 0.5rem;
   padding: 0;
   margin: 0;
