--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -7,6 +7,12 @@
   /* height: 100%; */
 }
 
+@media (min-width: 1435px) {
+  .dashboard {
+    column-width: 325px;
+  }
+}
+
 .dashboard.w-100 {
   max-width: 100%;
 }
@@ -67,20 +73,24 @@
   position: relative;
   border-radius: 4px;
 }
+
 .dashboard__item.--neocities p.small {
   margin: 0;
   font-size: 60%;
   color: var(--bg);
 }
+
 .dashboard__item.--neocities img {
   max-height: 50px;
   padding: 0.3rem;
-  filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.5));
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
 }
+
 .dashboard__item.--neocities a {
   color: var(--bg);
   font-size: 110%;
 }
+
 .dashboard__item.--neocities a::before {
   content: '';
   position: absolute;
@@ -97,6 +107,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 0.5rem;
 }
+
 .gallery img {
   height: auto;
   width: 100%;
@@ -109,15 +120,18 @@
   padding: 0.5rem;
   margin-top: 3px
 }
+
 .dashboard__item.--latestposts .description>ul,
 .dashboard__item.--latestposts .description>ol {
   padding: 0;
   margin: 0;
 }
+
 .dashboard__item.--latestposts .description>ul li::marker,
 .dashboard__item.--latestposts .description>ol li::marker {
   content: '';
 }
+
 .dashboard__item.--latestposts .description code,
 .dashboard__item.--latestposts .description pre {
   font-size: inherit;
