--- a/content/collections/avatars.njk
+++ b/content/collections/avatars.njk
@@ -11,13 +11,6 @@ style: ''
 <div class="dashboard w-100">
     <div class="dashboard__item">
         <figure>
-            <a href="https://alexboucher.carbonmade.com/">
-                <img src="/images/collections/avatars/flowerveil.png" alt="Avatar by Flowerveil" loading="lazy">
-            </a>
-        </figure>
-    </div>
-    <div class="dashboard__item">
-        <figure>
             <a href="https://picrew.me/en/image_maker/1243146">
                 <img src="/images/collections/avatars/crows_character_creator_.png" alt="Avatar by crowwithapen" loading="lazy">
             </a>
@@ -81,13 +74,6 @@ style: ''
     </div>
     <div class="dashboard__item">
         <figure>
-            <a href="http://mia-wilkes.squarespace.com/">
-                <img src="/images/collections/avatars/miaw.jpg" alt="Avatar by Mia Wilkes" loading="lazy">
-            </a>
-        </figure>
-    </div>
-    <div class="dashboard__item">
-        <figure>
             <a href="https://picrew.me/en/image_maker/263035/">
                 <img src="/images/collections/avatars/makowka_oc_maker.png" alt="Avatar by Makowwka" loading="lazy">
             </a>
@@ -104,6 +90,34 @@ style: ''
         <figure>
             <a href="https://picrew.me/en/image_maker/1322863/">
                 <img src="/images/collections/avatars/_friend_maker__by_Rowyn.png" alt="Avatar by Rowyn" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
+            <a href="https://picrew.me/en/image_maker/1918788">
+                <img src="/images/collections/avatars/anjubatus_heart_hold_char.png" alt="Avatar by Anjubatus" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
+            <a href="https://picrew.me/en/image_maker/606067/">
+                <img src="/images/collections/avatars/scrimsart.png" alt="Avatar by Scrimsart" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
+            <a href="http://mia-wilkes.squarespace.com/">
+                <img src="/images/collections/avatars/miaw.jpg" alt="Avatar by Mia Wilkes" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
+            <a href="https://alexboucher.carbonmade.com/">
+                <img src="/images/collections/avatars/flowerveil.png" alt="Avatar by Flowerveil" loading="lazy">
             </a>
         </figure>
     </div>
