🐛 Fix broken picrew link

--- a/content/collections/avatars.njk
+++ b/content/collections/avatars.njk
@@ -25,7 +25,7 @@ style: ''
     </div>
     <div class="dashboard__item">
         <figure>
-            <a href="https://picrew.me/en/image_maker/684527https://picrew.me/en/image_maker/684527">
+            <a href="https://picrew.me/en/image_maker/684527">
                 <img src="/images/collections/avatars/AmandaBaeza.png" alt="Avatar by Amanda Baeza" loading="lazy">
             </a>
         </figure>
