--- a/content/links.njk
+++ b/content/links.njk
@@ -198,6 +198,11 @@ scripts: '<script>
     "href": "https://xandra.cc/",
     "src": "xandra.png",
     "type": "button"
+  },{
+    "alt": "Mostly Pixels",
+    "href": "https://mostlypixels.com/",
+    "src": "mostlypixels.png",
+    "type": "button"
   }, {
     "name": "Amber Wilson",
     "href": "https://amberwilson.co.uk/",
